# vodila

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  setup_bot.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
scripts/: generate_gemini_audio.py
source_data/: 1-20.rtf  101-120.rtf  121-140.rtf  141-160.rtf  161-180.rtf  181-200.rtf  21-40.rtf  41-60.rtf  61-80.rtf  81-100.rtf
vodila/: main.py  parser.py  pyproject.toml
