[project]
name = "vodila"
version = "0.1.0"
description = "Flashcard app for learning Spanish traffic rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "striprtf>=0.0.29",
    "uvicorn[standard]>=0.41.0",
    "psycopg2-binary>=2.9.9",
]
